--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -321,3 +321,58 @@ width:100%;
 {
   filter: blur(40px);
 }
+
+
+/* about----------------------------------------------------------------------------------------- */
+
+
+.about 
+{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    grid-gap:2em;
+    background-color: var(--second-bg-color);
+
+}
+.about .img-about 
+{
+    text-align: center;
+    position: relative;
+
+}
+.about .img-about img 
+{
+    max-width: 400px;
+    border-radius: 50px;
+    box-shadow: var(--neon-box-shadow);
+    height:auto;
+}
+.about-content span 
+{
+    color: #fdfdfd;
+    font-size: .8rem;
+    font-weight:300;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+.about-content h2 
+{
+    color:var(--hover-color);
+    font-weight: 700;
+    font-size: var(--normal-font);
+}
+.about-content h3 
+{
+    font-weight: 600;
+    font-size: 1.5rem;
+    margin-bottom: .2rem;
+
+}
+.about-content p 
+{
+    color:#fdfdfd;
+    font-weight: 300;
+    margin-bottom: 1.5rem;
+}
+
