--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -376,3 +376,44 @@ width:100%;
     margin-bottom: 1.5rem;
 }
 
+/*   
+<!-------skills-section----------------------------------------------------------------------------------------------------------------------------------------------> */
+
+
+
+.skills
+{
+    background: var(--bg-color);
+}
+.skill-main
+{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-row-gap:30px;
+    grid-column-gap: 50px;;
+}
+.skill-bar
+{
+    margin-bottom: 2.3rem;
+}
+.skill-main h3{
+    margin-bottom:2rem;
+    font-size: var(--normal-font);
+    text-align: center;    
+}
+.skill-left .skill-bar .info 
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding:0 10px;
+}
+.skill-left .skill-bar .bar{
+    width:100%;
+    height:10px;
+    background-color: var(--second-bg-color);
+    border-radius: 25px;
+    margin-top: 10px;
+    position: relative;
+}
