added contact section

--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -517,3 +517,92 @@ width:100%;
     animation: glow 0.04s linear forwards;
     animation-delay: calc(var(--i)*0.05s);
 }
+/*portfolio section----------------------------------------------------------------------------------------------------------------------------------*/
+
+
+
+/* contact section------------------------------------------------------------------------------------------------------------------------------ */
+
+
+  
+.contact
+{
+    background-color: var(--second-bg-color);
+    width:100%;
+}
+.contact form{
+    text-align: center;
+    max-width: 50rem;
+    margin:1rem auto;
+    margin-bottom:3rem;
+}
+
+.contact form input,
+.contact form textarea{
+    width:100%;
+    color:var(--text-color);
+    background: var(--bg-color);
+    margin-bottom: .8rem;
+    border:none;
+    border-radius: .7rem;
+    padding:.7rem;
+}
+.contact .main-text 
+{
+    width:100%;
+    text-align:center;
+    line-height: 2em;
+}
+.contact .main-text span 
+{
+    color:var(--text-color);
+    font-weight:600;
+}
+.contact .main-text h2 
+{
+    text-transform: uppercase;
+    color:var(--hover-color);
+}
+.contact form textarea 
+{
+    resize: none;
+
+}
+.formBtn 
+{
+    display: flex;
+    justify-content: center;
+    width:100%;
+
+}
+.formBtn .btn 
+{
+    cursor:pointer;
+    font-size:1rem;
+}
+footer 
+{
+    padding:1.5rem 10%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+footer p 
+{
+    color:#bdbdbd;
+}
+footer a 
+{
+    display: inline-flex;
+    justify-content: center;
+    color:var(--text-color);
+    background-color: var(--hover-color);
+    padding:.6rem;
+    border-radius: 5px;
+}
+.footer a i 
+{
+    font-size:1 rem;
+    color:var(--second-bg-color);
+}
+
