--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -606,3 +606,30 @@ footer a
     color:var(--second-bg-color);
 }
 
+/* PARALLAX------------------------------------------------------- */
+
+.scroll-scale 
+{
+    opacity:0;
+    transform: scale(.9);
+    transition: all 2s;
+}
+
+.scroll-bottom
+{
+    opacity:0;
+    transform: translateY(300px);
+    transition: 3s;
+}
+/* .scroll-top
+{
+    opacity:0;
+    transform: translateY(-300px);
+    transition: 3s;
+} */
+
+.show-items 
+{
+    opacity:1;
+    transform: translateX(0);
+}
