--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -633,3 +633,100 @@ footer a
     opacity:1;
     transform: translateX(0);
 }
+
+@keyframes morph 
+{
+    0%,
+    100%
+    {
+        border-radius: 40% 60% 70% 30% / 40% 40% 50% 60%;
+    }
+    30%
+    {
+        border-radius: 70% 30% 50% 50% / 30% 30% 70% 70%;
+    }
+    60%{
+        border-radius: 100% 60% 60% 100% / 100% 100% 60% 60%;
+    }
+    80%
+    {
+        border-radius: 69% 31% 66% 34% / 21% 30% 70% 79%;
+    }
+}
+@keyframes html {
+    0%
+    {
+        width:0;
+    }
+    100%
+    {
+        width:90%;
+    }
+}
+@keyframes css {
+    0%
+    {
+        width:0;
+    }
+    100%
+    {
+        width:80%;
+    }
+}
+@keyframes javascript{
+    0%
+    {
+        width:0;
+    }
+    100%
+    {
+        width:80%;
+    }
+}
+@keyframes tailwind{
+    0%
+    {
+        width:0;
+    }
+    100%
+    {
+        width:85%;
+    }
+}
+@keyframes reactjs{
+    0%
+    {
+        width:0;
+    }
+    100%
+    {
+        width:85%;
+    }
+}
+
+@keyframes glow {
+    0%
+    {
+        background-color: var(--bg-color);
+        box-shadow: none;
+
+    }
+    100% 
+    {
+        background-color: var(--hover-color);
+        box-shadow: var(--neon-box-shadow);
+    }
+}
+@keyframes slideAnimation 
+{
+    0%
+    {
+        opacity:0;
+        transform: translateY(100px);
+    }
+    100%
+    {
+        opacity:1;
+        transform: translateY(0);
+    }
+}
